map as a file
