# src/main/kotlin/controller/maps/dto/response/MapListResponseDto.kt
@@ -7,5 +7,5 @@ data class MapListResponseDto(
   val id: Int,
   val name: String,
   val description: String,
-  val imageUri: String,
+  val imageData: String,
 )
