# src/main/kotlin/data/entity/MapTable.kt
@@ -5,5 +5,5 @@ import org.jetbrains.exposed.v1.core.dao.id.IntIdTable
 object MapTable : IntIdTable(name = "maps") {
   val name = varchar(name = "name", length = 255)
   val description = varchar(name = "description", length = 1000)
-  val imageUri = varchar(name = "image_uri", length = 500)
+  val imageData = text(name = "image_data")
 }
