# src/main/kotlin/domain/model/MapData.kt
@@ -4,6 +4,6 @@ data class MapData(
   val id: Int = 0,
   val name: String,
   val description: String,
-  val imageUri: String,
+  val imageData: String,
   val mapWaypoints: List<MapWaypoint>,
 )
